--- a/src/blocks/card/__image/card__image.css
+++ b/src/blocks/card/__image/card__image.css
@@ -1,7 +1,14 @@
-.card__image {
+.card__image-container {
   height: 282px;
-  object-fit: cover;
+  aspect-ratio: 1/1;
+  background: linear-gradient(#bcbcbc, #fefefe);
+}
+
+.card__image {
   width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
 }
 
 .card__image:hover {
