--- a/src/blocks/profile/__image/profile__image.css
+++ b/src/blocks/profile/__image/profile__image.css
@@ -1,12 +1,30 @@
 .profile__image {
   width: 120px;
   height: 120px;
+  position: relative;
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
   border-radius: 50%;
   background-size: cover;
   background-position: center;
   margin: 0 29px 0 0;
+  cursor: pointer;
+}
+
+.profile__image-edit {
+  position: absolute;
+  inset: 0;
+  background: rgb(0, 0, 0, .8) url('../../../images/edit-avatar-icon.svg') center no-repeat;
+  opacity: 0;
+  -webkit-transition: 0.3s;
+  -moz-transition: 0.3s;
+  -ms-transition: 0.3s;
+  -o-transition: 0.3s;
+  transition: 0.3s;
+}
+
+.profile__image:hover .profile__image-edit {
+  opacity: 1;
 }
 
 @media screen and (max-width: 740px) {
