--- a/main.css
+++ b/main.css
@@ -629,12 +629,30 @@ template {
 .profile__image {
   width: 120px;
   height: 120px;
+  position: relative;
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
   border-radius: 50%;
   background-size: cover;
   background-position: center;
   margin: 0 29px 0 0;
+  cursor: pointer;
+}
+
+.profile__image-edit {
+  position: absolute;
+  inset: 0;
+  background: rgb(0, 0, 0, .8) url(a086f758840ae814ecde.svg) center no-repeat;
+  opacity: 0;
+  -webkit-transition: 0.3s;
+  -moz-transition: 0.3s;
+  -ms-transition: 0.3s;
+  -o-transition: 0.3s;
+  transition: 0.3s;
+}
+
+.profile__image:hover .profile__image-edit {
+  opacity: 1;
 }
 
 @media screen and (max-width: 740px) {
@@ -695,7 +713,7 @@ template {
   justify-content: space-between;
   align-items: center;
   background: #fff;
-  padding: 25px 20px;
+  padding: 22px 20px;
 }
 
 .card__image-container {
@@ -716,14 +734,17 @@ template {
 }
 
 .card__like-button {
+  display: flex;
+  justify-content: center;
   width: 21px;
-  height: 18px;
+  height: 35px;
   background: transparent url(49570bcb1d637fdb38e5.svg) no-repeat;
   
   background-size: 21px 18px;
   border: none;
   cursor: pointer;
-  padding: 0;
+  padding: 0px;
+  padding-top: 23px;
   margin: 0;
   -webkit-transition: 0.3s;
   -moz-transition: 0.3s;
@@ -787,7 +808,6 @@ template {
 .popup__content {
   max-width: 430px;
   width: 100%;
-  min-height: 330px;
   background-color: #fff;
   border-radius: 10px;
   position: relative;
@@ -857,7 +877,7 @@ template {
 }
 
 .popup__form {
-  margin-top: 27px;
+  margin-top: 20px;
 }
 
 .popup__input {
@@ -868,12 +888,6 @@ template {
   font-size: 14px;
   line-height: 18px;
   box-sizing: border-box;
-  padding: 10px 0 0;
-  margin-bottom: 10px;
-}
-
-.popup__input:last-of-type {
-  margin-bottom: 0;
 }
 
 @media screen and (max-width: 568px) {
@@ -883,6 +897,22 @@ template {
   }
 }
 
+.popup__input_type_error {
+  border-bottom: 1px solid #f00;
+}
+
+.popup__error_visible {
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 14.52px;
+  color: #f00;
+}
+
+.popup__error {
+  display: block;
+  height: 28px;
+  margin-top: 3px;
+}
 .popup__button {
   width: 100%;
   height: 50px;
@@ -896,7 +926,7 @@ template {
   border-radius: 2px;
   border: none;
   transition: visibility 0s, background 0.3s;
-  margin-top: 48px;
+  margin-top: 10px;
 }
 
 .popup__button:hover {
@@ -911,6 +941,17 @@ template {
   }
 }
 
+.popup__button_disabled {
+  color: rgba(0, 0, 0, .2);
+  border: 1px solid rgba(0, 0, 0, .2);
+  background: transparent;
+}
+
+.popup__button_disabled:hover {
+  background: transparent;
+  border: 1px solid rgba(0, 0, 0, .2);
+  cursor: default;
+}
 .popup__caption {
   font-size: 12px;
   line-height: 15px;
